Update СПм-24-1, Гордійко, ЛР_1.md

--- a/lb1/СПм-24-1, Гордійко, ЛР_1.md
+++ b/lb1/СПм-24-1, Гордійко, ЛР_1.md
@@ -1,8 +1,8 @@
 ## Комп'ютерні системи імітаційного моделювання
-## СПм-24-1, **Середа Сергій Сергійович**
+## СПм-24-1, **Гордійко Владислав Русланович**
 ### Лабораторна робота №**1**. Опис імітаційних моделей та проведення обчислювальних експериментів
 
-### Варіант 17, модель у середовищі NetLogo:
+### Варіант 4, модель у середовищі NetLogo:
 [Urban Suite - Pollution](https://www.netlogoweb.org/launch#http://www.netlogoweb.org/assets/modelslib/Curricular%20Models/Urban%20Suite/Urban%20Suite%20-%20Pollution.nlogo)
 
 <br>
