Update СПм-24-1, Гордійко, ЛР_2.md

--- a/lb2/СПм-24-1, Гордійко, ЛР_2.md
+++ b/lb2/СПм-24-1, Гордійко, ЛР_2.md
@@ -1,8 +1,8 @@
 ## Комп'ютерні системи імітаційного моделювання
-## СПм-24-1, **Середа Сергій Сергійович**
+## СПм-24-1, **Гордійко Владислав Русланович**
 ### Лабораторна робота №2. Редагування імітаційних моделей у середовищі NetLogo
 
-### Варіант 17, модель у середовищі NetLogo:
+### Варіант 4, модель у середовищі NetLogo:
 [Urban Suite - Pollution](https://www.netlogoweb.org/launch#http://www.netlogoweb.org/assets/modelslib/Curricular%20Models/Urban%20Suite/Urban%20Suite%20-%20Pollution.nlogo) 
 
 Реалізувати позитивний вплив наявності на імітаційному полі електростанцій на вірогідність появи нових людей. Збільшити вірогідність висадки дерев у клітинах поблизу електростанцій.
