Update СПм-24-1, Гордійко, ЛР_3.md

--- a/lb3/СПм-24-1, Гордійко, ЛР_3.md
+++ b/lb3/СПм-24-1, Гордійко, ЛР_3.md
@@ -1,5 +1,5 @@
 ## Комп'ютерні системи імітаційного моделювання
-## СПм-24-1, **Середа Сергій Сергійович**
+## СПм-24-1, **Гордійко Владислав Русланович**
 ### Лабораторна робота №3. Використання засобів обчислювального інтелекту для оптимізації імітаційних моделей
 
 ### Варіант 17, модель у середовищі NetLogo:
