Update СПм-24-1, Гордійко, ЛР_1.md

--- a/lb1/СПм-24-1, Гордійко, ЛР_1.md
+++ b/lb1/СПм-24-1, Гордійко, ЛР_1.md
@@ -8,11 +8,11 @@
 <br>
 
 ### Вербальний опис моделі:
-Ця модель симулює взаємодію між популяцією людей, забрудненням навколишнього середовища, що генерується електростанціями, та деревами, які допомагають поглинати це забруднення. Вона дозволяє побачити, як зміна параметрів (наприклад, рівня забруднення або швидкості посадки дерев) впливає на виживання популяції людей з часом.
+Ця модель описує динаміку взаємодії між чисельністю людського населення, забрудненням довкілля, яке створюють електростанції, та деревами, що зменшують рівень цього забруднення. Вона дає змогу дослідити, як зміна різних параметрів — зокрема інтенсивності забруднення або темпів висаджування дерев — впливає на довгострокове виживання людської популяції.
 
 ### Параметри моделі:
-- **INITIAL-POPULATION**: Встановлює початкову кількість людей у світі.
-- **BIRTH-RATE**: Визначає ймовірність того, що людина народить нащадка за один тік.
+- **INITIAL-POPULATION**: Визначає початкову кількість людей у світі.
+- **BIRTH-RATE**: Встановлюється ймовірність того, що людина народить нащадка за один тік.
 - **PLANTING-RATE**: Визначає ймовірність того, що людина посадить дерево за один тік.
 - **POWER-PLANTS**: Кількість електростанцій, що створюються.
 - **POLLUTING-RATE**: Кількість забруднення, яку кожна електростанція генерує за один тік.
@@ -23,13 +23,12 @@
 - Час виживання популяції у роках.
 
 ### Примітки:
-Графік WORLD STATUS допомагає візуалізувати динаміку системи, показуючи, як змінюються кількість людей, дерев та рівень забруднення з часом.
+Графік WORLD STATUS наочно відображає динаміку системи, демонструючи, як із плином часу змінюються чисельність населення, кількість дерев і рівень забруднення навколишнього середовища.
 
 ### Недоліки моделі:
-- Кількість електростанцій фіксується на початку і не змінюється, незалежно від потреби людей;
-- Люди не намагаються уникати зон з високим рівнем забруднення;
-- Дерева не розмножуються самостійно, а лише садяться людьми.
-
+- Кількість електростанцій задається на початку моделювання і залишається сталою незалежно від потреб населення;
+- Люди не уникають територій із підвищеним рівнем забруднення;
+- Дерева не відновлюються природним шляхом, а з’являються виключно внаслідок діяльності людей.
 <br>
 
 ## Обчислювальні експерименти
@@ -42,11 +41,11 @@
 ### 1. Вплив кількості електростанцій
 | № ітерації | years | power-plants |
 | :--- | :---: | :---: |
-| **1** | 439 | 2 |
-| **2** | 330 | 4 |
-| **3** | 265 | 6 |
-| **4** | 242 | 8 |
-| **5** | 217 | 10 |
+| **1** | 325 | 2 |
+| **2** | 299 | 4 |
+| **3** | 232 | 6 |
+| **4** | 186 | 8 |
+| **5** | 139 | 10 |
 
 ![графік](screens/1.png)
 
